welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:25: error: illegal start of statement (no modifiers allowed here)
override def run()
^